--- a/js/packages/openinference-instrumentation-langchain/package.json
+++ b/js/packages/openinference-instrumentation-langchain/package.json
@@ -32,8 +32,10 @@
     "@opentelemetry/instrumentation": "^0.46.0"
   },
   "devDependencies": {
-    "@langchain/core": "^0.2.28",
-    "@langchain/openai": "^0.2.7",
+    "@langchain/core": "^0.2.30",
+    "@langchain/coreV1": "npm:@langchain/core@^0.1.0",
+    "@langchain/openai": "^0.2.8",
+    "@langchain/openaiV1": "npm:@langchain/openai@^0.1.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
     "@opentelemetry/resources": "^1.25.1",
     "@opentelemetry/sdk-trace-base": "^1.25.1",
@@ -44,6 +46,7 @@
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "langchain": "^0.2.17",
+    "langchainV1": "npm:langchain@^0.1.0",
     "openai": "^4.52.7"
   }
 }
