pin lower bound

--- a/python/instrumentation/openinference-instrumentation-mistralai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-mistralai/pyproject.toml
@@ -34,10 +34,10 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-  "mistralai",
+  "mistralai>=1.0.0",
 ]
 test = [
-  "mistralai<0.2",
+  "mistralai=1.0.0",
   "opentelemetry-sdk",
   "opentelemetry-instrumentation-httpx",
   "respx",
