--- a/js/packages/openinference-instrumentation-langchain/tsconfig.esm.json
+++ b/js/packages/openinference-instrumentation-langchain/tsconfig.esm.json
@@ -8,8 +8,8 @@
   "include": ["src/**/*.ts"],
   "references": [],
   "paths": {
-    "langchainV1/*": ["node_modules/langchainV1/*"],
-    "@langchain/coreV1/*": ["node_modules/@langchain/coreV1/*"],
-    "@langchain/openaiV1/*": ["node_modules/@langchain/openaiV1/*"]
+    "langchainV0.1/*": ["node_modules/langchainV0.1/*"],
+    "@langchain/coreV0.1/*": ["node_modules/@langchain/coreV0.1/*"],
+    "@langchain/openaiV0.1/*": ["node_modules/@langchain/openaiV0.1/*"]
   }
 }
