feat(langchainjs): support langchain `^0.2.0` (#963)

--- a/js/packages/openinference-instrumentation-langchain/tsconfig.json
+++ b/js/packages/openinference-instrumentation-langchain/tsconfig.json
@@ -7,5 +7,10 @@
   },
   "files": [],
   "include": ["src/**/*.ts", "examples/**/*.ts"],
-  "references": []
+  "references": [],
+  "paths": {
+    "langchainV0.1/*": ["node_modules/langchainV0.1/*"],
+    "@langchain/coreV0.1/*": ["node_modules/@langchain/coreV0.1/*"],
+    "@langchain/openaiV0.1/*": ["node_modules/@langchain/openaiV0.1/*"]
+  }
 }
