--- a/js/examples/next-openai-telemetry-app/package.json
+++ b/js/examples/next-openai-telemetry-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "latest",
     "@ai-sdk/react": "latest",
+    "@arizeai/openinference-semantic-conventions": "^0.10.0",
     "@arizeai/openinference-vercel": "^0.1.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.52.1",
@@ -26,7 +27,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^18",
+    "@types/node": "^18.19.46",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.14",
