--- a/js/packages/openinference-instrumentation-openai/package.json
+++ b/js/packages/openinference-instrumentation-openai/package.json
@@ -19,8 +19,8 @@
     "test": "jest ."
   },
   "dependencies": {
-    "@arizeai/openinference-semantic-conventions": "workspace:*",
     "@arizeai/openinference-core": "workspace:*",
+    "@arizeai/openinference-semantic-conventions": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/core": "^1.25.1",
     "@opentelemetry/instrumentation": "^0.46.0"
@@ -33,6 +33,7 @@
   "author": "oss-devs@arize.com",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
     "@opentelemetry/resources": "^1.25.1",
     "@opentelemetry/sdk-trace-base": "^1.25.1",
     "@opentelemetry/sdk-trace-node": "^1.25.1",
