--- a/python/tox.ini
+++ b/python/tox.ini
@@ -16,7 +16,7 @@ envlist =
   py3{8,12}-ci-{haystack,haystack-latest}
   py3{8,12}-ci-{groq,groq-latest}
   py3{8,12}-ci-{litellm,litellm-latest}
-  py3{9,12}-ci-{instructor,instructor-latest}
+  py3{9,12}-ci-instructor
   py3{8,12}-ci-{anthropic,anthropic-latest}
   py38-mypy-langchain_core
 
