--- a/js/examples/openai/backend/package.json
+++ b/js/examples/openai/backend/package.json
@@ -4,36 +4,51 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsup ./index.ts ./instrumentation.ts --format cjs --dts",
-    "start": "node --import ./dist/instrumentation.cjs ./dist/index.cjs",
-    "dev": "concurrently \"tsup ./index.ts ./instrumentation.ts --format cjs --dts --watch\" \"nodemon --inspect --import ./dist/instrumentation.cjs -q ./dist/index.cjs\"",
+    "build": "tsup ./index.ts ./instrumentation2.ts --format cjs --dts",
+    "start": "node --import ./dist/instrumentation2.cjs ./dist/index.cjs",
+    "dev": "concurrently \"tsup ./index.ts ./instrumentation2.ts --format cjs --dts --watch\" \"nodemon --inspect --import ./dist/instrumentation2.cjs -q ./dist/index.cjs\"",
     "type:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@arizeai/openinference-instrumentation-openai": "^0.1.0",
-    "@arizeai/openinference-semantic-conventions": "^0.2.0",
-    "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.46.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.46.0",
-    "@opentelemetry/instrumentation": "^0.47.0",
-    "@opentelemetry/resources": "^1.20.0",
-    "@opentelemetry/sdk-trace-base": "^1.20.0",
-    "@opentelemetry/sdk-trace-node": "^1.20.0",
-    "@opentelemetry/semantic-conventions": "^1.20.0",
-    "ai": "^3.1.20",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "openai": "^4.29.2"
+    "@arizeai/openinference-instrumentation-openai": "^0.5.0",
+    "@grpc/grpc-js": "^1.11.2",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.53.0",
+    "@opentelemetry/instrumentation": "^0.53.0",
+    "@opentelemetry/resources": "^1.26.0",
+    "@opentelemetry/sdk-trace-base": "^1.26.0",
+    "@opentelemetry/sdk-trace-node": "^1.26.0",
+    "axios": "^1.7.4",
+    "node-emoji": "2.1.3",
+    "openai": "^4.53.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.16",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30",
-    "concurrently": "^8.2.2",
-    "eslint": "^8.54.0",
-    "nodemon": "^3.0.1",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.2"
+    "@tsconfig/node18": "^2.0.1",
+    "@types/aws-lambda": "^8.10.143",
+    "@types/crypto-js": "^4.2.2",
+    "@types/jest": "^28.1.7",
+    "@types/node": "<19.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
+    "constructs": "10.3.0",
+    "datadog-cdk-constructs-v2": "^1.14.1",
+    "datadog-lambda-js": "^9.115.0",
+    "dd-trace": "^5.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^28.8.0",
+    "eslint-plugin-n": "^17.9.0",
+    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-sonarjs": "^1.0.4-alpha.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "sst": "2.43.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "5.1.6",
+    "vitest": "^2.0.5"
   }
 }
