ci: exclude voletile libraries from CI

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -11,12 +11,12 @@ envlist =
   py3{8,12}-ci-{llama_index,llama_index-latest}
   py3{9,12}-ci-{dspy,dspy-latest}
   py3{8,12}-ci-{langchain,langchain-latest}
-  py3{9,12}-ci-{guardrails,guardrails-latest}
-  py3{10,12}-ci-{crewai,crewai-latest}
+  ; py3{9,12}-ci-{guardrails,guardrails-latest}
+  ; py3{10,12}-ci-{crewai,crewai-latest}
   py3{8,12}-ci-{haystack,haystack-latest}
   py3{8,12}-ci-{groq,groq-latest}
-  py3{8,12}-ci-{litellm,litellm-latest}
-  py3{9,12}-ci-instructor
+  ; py3{8,12}-ci-{litellm,litellm-latest}
+  ; py3{9,12}-ci-instructor
   py3{8,12}-ci-{anthropic,anthropic-latest}
   py38-mypy-langchain_core
 
@@ -69,10 +69,10 @@ commands_pre =
   haystack-latest: uv pip install -U haystack-ai
   groq: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
   groq-latest: uv pip install -U groq
-  litellm: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-litellm[test]
-  litellm-latest: uv pip install -U litellm
-  instructor: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
-  instructor-latest: uv pip install -U instructor
+  ; litellm: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-litellm[test]
+  ; litellm-latest: uv pip install -U litellm
+  ; instructor: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
+  ; instructor-latest: uv pip install -U instructor
   anthropic: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-anthropic[test]
   anthropic-latest: uv pip install -U anthropic
 commands =
