--- a/python/tox.ini
+++ b/python/tox.ini
@@ -79,8 +79,8 @@ commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check --fix {posargs:.}
   mypy: mypy {posargs:.}
-  test: pytest -n auto --nf {posargs:.}
-  ci: ruff format --diff {posargs:.}
-  ci: ruff check --no-fix {posargs:.}
-  ci: mypy {posargs:.}
+  test: pytest -rfEs -l --nf {posargs:.}
+  ci: ruff format --diff .
+  ci: ruff check --no-fix .
+  ci: mypy .
   ci: pytest -n auto -x -ra {posargs:.}
