--- a/python/tox.ini
+++ b/python/tox.ini
@@ -10,7 +10,7 @@ envlist =
   py3{8,12}-ci-{vertexai,vertexai-latest}
   py3{8,12}-ci-{llama_index,llama_index-latest}
   py3{9,12}-ci-{dspy,dspy-latest}
-  py3{8,12}-ci-{langchain,langchain-latest}
+  py3{9,12}-ci-{langchain,langchain-latest}
   ; py3{9,12}-ci-{guardrails,guardrails-latest}
   ; py3{10,12}-ci-{crewai,crewai-latest}
   py3{8,12}-ci-{haystack,haystack-latest}
@@ -79,8 +79,8 @@ commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check --fix {posargs:.}
   mypy: mypy {posargs:.}
-  test: pytest -n auto --nf {posargs:.}
-  ci: ruff format --diff {posargs:.}
-  ci: ruff check --no-fix {posargs:.}
-  ci: mypy {posargs:.}
+  test: pytest -rfEs -l --nf {posargs:.}
+  ci: ruff format --diff .
+  ci: ruff check --no-fix .
+  ci: mypy .
   ci: pytest -n auto -x -ra {posargs:.}
