--- a/js/packages/openinference-core/package.json
+++ b/js/packages/openinference-core/package.json
@@ -34,10 +34,8 @@
   },
   "dependencies": {
     "@arizeai/openinference-semantic-conventions": "workspace:*",
-    "@opentelemetry/core": "^1.25.1"
-  },
-  "peerDependencies": {
-    "@opentelemetry/api": ">=1.0.0 <1.9.0"
+    "@opentelemetry/core": "^1.25.1",
+    "@opentelemetry/api": "^1.9.0"
   },
   "devDependencies": {
     "@opentelemetry/context-async-hooks": "^1.25.1",
