feat(core): add trace config (#1048)

--- a/js/packages/openinference-core/tsconfig.esnext.json
+++ b/js/packages/openinference-core/tsconfig.esnext.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "dist/esnext",
     "rootDir": "src",
-    "tsBuildInfoFile": "dist/esnext/tsconfig.esnext.tsbuildinfo"
+    "tsBuildInfoFile": "dist/esnext/tsconfig.esnext.tsbuildinfo",
+    "baseUrl": "./src"
   },
   "include": ["src/**/*.ts"],
   "references": []
