--- a/js/packages/openinference-core/tsconfig.json
+++ b/js/packages/openinference-core/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "baseUrl": "./src"
   },
   "files": [],
   "include": ["src/**/*.ts", "test/**/*.ts"],
