--- a/js/packages/openinference-core/tsconfig.esm.json
+++ b/js/packages/openinference-core/tsconfig.esm.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "dist/esm",
     "rootDir": "src",
-    "tsBuildInfoFile": "dist/esm/tsconfig.esm.tsbuildinfo"
+    "tsBuildInfoFile": "dist/esm/tsconfig.esm.tsbuildinfo",
+    "baseUrl": "./src"
   },
   "include": ["src/**/*.ts"],
   "references": []
