--- a/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
@@ -38,10 +38,11 @@ instruments = [
   "dspy-ai >= 2.5.0",
 ]
 test = [
-  "dspy-ai==2.3.4",
+  "dspy-ai==2.5.0",
   "google-generativeai",
   "opentelemetry-sdk",
   "pytest-recording",
+  "litellm",
 ]
 
 [project.urls]
