run tox sequentially

--- a/.github/workflows/python-CI.yaml
+++ b/.github/workflows/python-CI.yaml
@@ -50,7 +50,5 @@ jobs:
             3.12
       - run: pip install tox-uv==1.11.2
         if: ${{ (steps.filter.outputs.diff == 'true') && (steps.changes.outputs.packages != '') }}
-      - run: >-
-          tox run-parallel --parallel-no-spinner
-          -e $(tox -l | egrep -e '${{ steps.changes.outputs.packages }}' | paste -sd, -)
+      - run: tox run -e $(tox -l | egrep -e '${{ steps.changes.outputs.packages }}' | paste -sd, -)
         if: ${{ (steps.filter.outputs.diff == 'true') && (steps.changes.outputs.packages != '') }}
