--- a/.github/workflows/python-cron.yaml
+++ b/.github/workflows/python-cron.yaml
@@ -24,8 +24,7 @@ jobs:
             3.12
       - run: pip install tox-uv==1.11.2
       - run: >-
-          tox run-parallel --parallel-no-spinner
-          -e $(tox -l | egrep -e '-latest$' | paste -sd, -)
+          tox run -e $(tox -l | egrep -e '-latest$' | paste -sd, -)
           --result-json=${{ runner.temp }}/.tox-result.json
       - run: >-
           echo "testenvs=$(cat ${{ runner.temp }}/.tox-result.json
