--- a/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
@@ -35,14 +35,14 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-  "dspy-ai >= 2.3.4",
+  "dspy-ai >= 2.5.0",
 ]
 test = [
-  "dspy-ai==2.3.4",
+  "dspy-ai==2.5.0",
   "google-generativeai",
   "opentelemetry-sdk",
-  "responses",
-  "respx==0.20.2",
+  "pytest-recording",
+  "litellm",
 ]
 
 [project.urls]
