feat(langchain): support version 0.3

--- a/js/package.json
+++ b/js/package.json
@@ -43,6 +43,7 @@
   ],
   "pnpm": {
     "overrides": {
+      "@langchain/openai@^0.2>@langchain/core": "^0.2.36",
       "@langchain/openai@^0.1>@langchain/core": "^0.1.63"
     }
   }
