--- a/js/packages/openinference-instrumentation-langchain/package.json
+++ b/js/packages/openinference-instrumentation-langchain/package.json
@@ -33,12 +33,14 @@
     "@opentelemetry/instrumentation": "^0.46.0"
   },
   "peerDependencies": {
-    "@langchain/core": "^0.1.0 || ^0.2.0"
+    "@langchain/core": "^0.1.0 || ^0.2.0 || ^0.3.0"
   },
   "devDependencies": {
-    "@langchain/core": "^0.2.30",
+    "@langchain/core": "^0.3.13",
+    "@langchain/coreV0.2": "npm:@langchain/core@^0.2.0",
     "@langchain/coreV0.1": "npm:@langchain/core@^0.1.0",
-    "@langchain/openai": "^0.2.8",
+    "@langchain/openai": "^0.3.11",
+    "@langchain/openaiV0.2": "npm:@langchain/openai@^0.2.0",
     "@langchain/openaiV0.1": "npm:@langchain/openai@^0.1.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
     "@opentelemetry/resources": "^1.25.1",
@@ -49,8 +51,9 @@
     "@types/node": "^20.14.11",
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
-    "langchain": "^0.2.17",
+    "langchain": "^0.3.3",
     "langchainV0.1": "npm:langchain@^0.1.0",
+    "langchainV0.2": "npm:langchain@^0.2.0",
     "openai": "^4.52.7"
   }
 }
