--- a/js/package.json
+++ b/js/package.json
@@ -43,8 +43,13 @@
   ],
   "pnpm": {
     "overrides": {
+      "@langchain/core@^0.2>langchain": "^0.2.17",
+      "@langchain/core@^0.1>langchain": "^0.1.37",
+      "langchain@^0.2>@langchain/core": "^0.2.36",
       "@langchain/openai@^0.2>@langchain/core": "^0.2.36",
-      "@langchain/openai@^0.1>@langchain/core": "^0.1.63"
+      "@langchain/openai@^0.1>@langchain/core": "^0.1.63",
+      "@langchain/openai@0.1>langchain": "^0.1.37",
+      "@langchain/openai@0.2>langchain": "^0.2.17"
     }
   }
 }
