--- a/python/openinference-semantic-conventions/pyproject.toml
+++ b/python/openinference-semantic-conventions/pyproject.toml
@@ -45,6 +45,7 @@ packages = ["src/openinference"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 testpaths = [
   "tests",
 ]
