chore: use tox for adding symlinks

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -84,3 +84,16 @@ commands =
   ci: ruff check --no-fix .
   ci: mypy .
   ci: pytest -n auto -x -ra {posargs:.}
+
+[testenv:add_symlinks]
+description = Add symlinks to packages (for editable install)
+changedir = openinference-instrumentation/src/openinference/instrumentation
+commands =
+  python -c 'from pathlib import Path;[(l.symlink_to(t,True) if not (l:=Path.cwd()/d.name[30:]).exists() and (t:=d/"src"/"openinference"/"instrumentation"/d.name[30:].replace("-","_")).exists() else None) for d in (Path.cwd().parent.parent.parent.parent/"instrumentation").iterdir() if d.is_dir()]'
+
+[testenv:remove_symlinks]
+description = Remove symlinks to packages
+changedir = openinference-instrumentation/src/openinference/instrumentation
+allowlist_externals = find
+commands =
+  find . -maxdepth 1 -type l -exec unlink {} \;
