--- a/python/tox.ini
+++ b/python/tox.ini
@@ -50,9 +50,10 @@ commands_pre =
   bedrock-latest: uv pip install -U boto3
   mistralai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
   mistralai-latest: uv pip install -U mistralai
+  openai: uv pip uninstall -r test-requirements.txt
   openai: uv pip install --reinstall-package openinference-instrumentation-openai .
   openai: python -c 'import openinference.instrumentation.openai'
-  openai: uv pip install .[test]
+  openai: uv pip install -r test-requirements.txt
   openai-latest: uv pip install -U openai
   vertexai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-vertexai[test]
   vertexai-latest: uv pip install -U vertexai
