--- a/python/tox.ini
+++ b/python/tox.ini
@@ -76,7 +76,10 @@ commands_pre =
   litellm-latest: uv pip install -U litellm
   ; instructor: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
   ; instructor-latest: uv pip install -U instructor
-  anthropic: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-anthropic[test]
+  anthropic: uv pip uninstall -r test-requirements.txt
+  anthropic: uv pip install --reinstall-package openinference-instrumentation-anthropic .
+  anthropic: python -c 'import openinference.instrumentation.anthropic'
+  anthropic: uv pip install -r test-requirements.txt
   anthropic-latest: uv pip install -U anthropic
 commands =
   ruff: ruff format {posargs:.}
