--- a/python/tox.ini
+++ b/python/tox.ini
@@ -64,7 +64,10 @@ commands_pre =
   langchain: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
   langchain-latest: uv pip install -U langchain langchain_core langchain_anthropic langchain_openai langchain_community
   langchain_core: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
-  guardrails: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-guardrails[test]
+  guardrails: uv pip uninstall -r test-requirements.txt
+  guardrails: uv pip install --reinstall-package openinference-instrumentation-guardrails .
+  guardrails: python -c 'import openinference.instrumentation.guardrails'
+  guardrails: uv pip install -r test-requirements.txt
   guardrails-latest: uv pip install -U 'guardrails-ai<0.5.2'
   crewai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
   crewai-latest: uv pip install -U crewai
