--- a/python/instrumentation/openinference-instrumentation-guardrails/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-guardrails/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
   "openinference-semantic-conventions",
   "wrapt",
   "typing-extensions",
+  "packaging",
 ]
 
 [project.optional-dependencies]
