change dep name to dspy

--- a/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
@@ -35,10 +35,10 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-  "dspy-ai >= 2.5.0",
+  "dspy >= 2.5.0",
 ]
 test = [
-  "dspy-ai>=2.5.27",
+  "dspy>=2.5.27",
   "google-generativeai",
   "opentelemetry-sdk",
   "pytest-recording",
