chore(js): Fix langchain-express example docker compose

--- a/js/examples/langchain-express/backend/Dockerfile
+++ b/js/examples/langchain-express/backend/Dockerfile
@@ -6,13 +6,13 @@ FROM base AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY package.json ./
-RUN npm i
+RUN npm i --silent
 
 # Rebuild the source code only when needed
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-COPY . /app/
+COPY . .
 RUN npm run build
 
 # Production image, copy all the files and run the server
