--- a/js/examples/langchain-express/frontend/Dockerfile
+++ b/js/examples/langchain-express/frontend/Dockerfile
@@ -7,7 +7,7 @@ FROM base AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY package.json ./
-RUN npm i
+RUN npm i --quiet
 
 # Rebuild the source code only when needed
 FROM base AS builder
