chore(js): Fix langchain-express and llama-index-express docker examples (#1120)

--- a/js/examples/langchain-express/backend/Dockerfile
+++ b/js/examples/langchain-express/backend/Dockerfile
@@ -6,13 +6,13 @@ FROM base AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY package.json ./
-RUN npm i
+RUN npm i --quiet
 
 # Rebuild the source code only when needed
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-COPY . /app/
+COPY . .
 RUN npm run build
 
 # Production image, copy all the files and run the server
@@ -20,7 +20,7 @@ FROM base AS runner
 WORKDIR /app
 ENV NODE_ENV production
 COPY --from=builder /app/dist ./dist
-COPY package*.json ./
-RUN npm i --production
+COPY --from=deps /app/node_modules ./node_modules
+COPY package.json ./
 EXPOSE 8000
 CMD ["node", "--import", "./dist/instrumentation.cjs", "./dist/index.cjs"]
