chore: fix add_symlinks in tox.ini

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -98,7 +98,7 @@ commands =
 description = Add symlinks to packages (for editable install)
 changedir = openinference-instrumentation/src/openinference/instrumentation
 commands =
-  python -c 'from pathlib import Path;[(l.symlink_to(t,True) if not (l:=Path.cwd()/d.name[30:]).exists() and (t:=d/"src"/"openinference"/"instrumentation"/d.name[30:].replace("-","_")).exists() else None) for d in (Path.cwd().parent.parent.parent.parent/"instrumentation").iterdir() if d.is_dir()]'
+  python -c 'from pathlib import Path;[(l.symlink_to(t,True) if not (l:=Path.cwd()/d.name[30:].replace("-","_")).exists() and (t:=d/"src"/"openinference"/"instrumentation"/d.name[30:].replace("-","_")).exists() else None) for d in (Path.cwd().parent.parent.parent.parent/"instrumentation").iterdir() if d.is_dir()]'
 
 [testenv:remove_symlinks]
 description = Remove symlinks to packages
