--- a/python/examples/llama-index/compose.yaml
+++ b/python/examples/llama-index/compose.yaml
@@ -1,6 +1,6 @@
 services:
   phoenix:
-    image: arizephoenix/phoenix:version-3.21.0
+    image: arizephoenix/phoenix:sessions
     ports:
       - "6006:6006"
   backend:
