--- a/js/packages/openinference-core/package.json
+++ b/js/packages/openinference-core/package.json
@@ -2,14 +2,20 @@
   "name": "@arizeai/openinference-core",
   "version": "0.3.2",
   "private": false,
-  "main": "dist/src/index.js",
-  "module": "dist/esm/index.js",
   "esnext": "dist/esnext/index.js",
-  "types": "dist/src/index.d.ts",
+  "types": "./dist/src/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/src/index.d.ts",
+      "import": "./dist/esm/index.mjs",
+      "require": "./dist/src/index.js",
+      "default": "./dist/src/index.js"
+    }
+  },
   "description": "OpenInference Core provides utilities shared by all OpenInference SDK packages.",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc --build tsconfig.json tsconfig.esm.json tsconfig.esnext.json",
+    "build": "vite build && tsc --emitDeclarationOnly --outDir dist && rimraf dist/test dist/tsconfig.tsbuildinfo",
     "type:check": "tsc --noEmit",
     "test": "jest"
   },
@@ -34,8 +40,8 @@
   },
   "dependencies": {
     "@arizeai/openinference-semantic-conventions": "workspace:*",
-    "@opentelemetry/core": "^1.25.1",
-    "@opentelemetry/api": "^1.9.0"
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/core": "^1.25.1"
   },
   "devDependencies": {
     "@opentelemetry/context-async-hooks": "^1.25.1",
@@ -45,6 +51,8 @@
     "@opentelemetry/semantic-conventions": "^1.19.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.11",
-    "jest": "^29.7.0"
+    "glob": "^11.0.0",
+    "jest": "^29.7.0",
+    "vite": "^6.0.2"
   }
 }
