--- a/js/packages/openinference-core/package.json
+++ b/js/packages/openinference-core/package.json
@@ -2,6 +2,8 @@
   "name": "@arizeai/openinference-core",
   "version": "0.3.2",
   "private": false,
+  "main": "dist/src/index.js",
+  "module": "dist/esm/index.mjs",
   "esnext": "dist/esnext/index.js",
   "types": "./dist/src/index.d.ts",
   "exports": {
