ci: retrict httpx version

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -47,43 +47,43 @@ commands_pre =
   instrumentation: uv pip install --reinstall {toxinidir}/openinference-instrumentation[test]
   semconv: uv pip install --reinstall {toxinidir}/openinference-semantic-conventions
   bedrock: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
-  bedrock-latest: uv pip install -U boto3
+  bedrock-latest: uv pip install -U boto3 'httpx<0.28'
   mistralai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
-  mistralai-latest: uv pip install -U mistralai
+  mistralai-latest: uv pip install -U mistralai 'httpx<0.28'
   openai: uv pip uninstall -r test-requirements.txt
   openai: uv pip install --reinstall-package openinference-instrumentation-openai .
   openai: python -c 'import openinference.instrumentation.openai'
   openai: uv pip install -r test-requirements.txt
-  openai-latest: uv pip install -U openai
+  openai-latest: uv pip install -U openai 'httpx<0.28'
   vertexai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-vertexai[test]
-  vertexai-latest: uv pip install -U vertexai
+  vertexai-latest: uv pip install -U vertexai 'httpx<0.28'
   llama_index: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
-  llama_index-latest: uv pip install -U llama-index llama-index-core
+  llama_index-latest: uv pip install -U llama-index llama-index-core 'httpx<0.28'
   dspy: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
-  dspy-latest: uv pip install -U dspy-ai
+  dspy-latest: uv pip install -U dspy-ai 'httpx<0.28'
   langchain: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
-  langchain-latest: uv pip install -U langchain langchain_core langchain_anthropic langchain_openai langchain_community
+  langchain-latest: uv pip install -U langchain langchain_core langchain_anthropic langchain_openai langchain_community 'httpx<0.28'
   langchain_core: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
   guardrails: uv pip uninstall -r test-requirements.txt
   guardrails: uv pip install --reinstall-package openinference-instrumentation-guardrails .
   guardrails: python -c 'import openinference.instrumentation.guardrails'
   guardrails: uv pip install -r test-requirements.txt
-  guardrails-latest: uv pip install -U 'guardrails-ai<0.5.1'
+  guardrails-latest: uv pip install -U 'guardrails-ai<0.5.1' 'httpx<0.28'
   crewai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
-  crewai-latest: uv pip install -U crewai
+  crewai-latest: uv pip install -U crewai 'httpx<0.28'
   haystack: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
-  haystack-latest: uv pip install -U haystack-ai
+  haystack-latest: uv pip install -U haystack-ai 'httpx<0.28'
   groq: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
-  groq-latest: uv pip install -U groq
+  groq-latest: uv pip install -U groq 'httpx<0.28'
   litellm: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-litellm[test]
-  litellm-latest: uv pip install -U litellm
+  litellm-latest: uv pip install -U litellm 'httpx<0.28'
   ; instructor: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
   ; instructor-latest: uv pip install -U instructor
   anthropic: uv pip uninstall -r test-requirements.txt
   anthropic: uv pip install --reinstall-package openinference-instrumentation-anthropic .
   anthropic: python -c 'import openinference.instrumentation.anthropic'
   anthropic: uv pip install -r test-requirements.txt
-  anthropic-latest: uv pip install -U anthropic
+  anthropic-latest: uv pip install -U anthropic 'httpx<0.28'
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check --fix {posargs:.}
