--- a/js/packages/openinference-vercel/tsconfig.json
+++ b/js/packages/openinference-vercel/tsconfig.json
@@ -7,6 +7,6 @@
     "lib": ["ESNext"]
   },
   "files": [],
-  "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts"],
+  "include": ["src/**/*.ts", "test/**/*.ts"],
   "references": []
 }
