feat(js): Fix ESM builds

--- a/js/package.json
+++ b/js/package.json
@@ -31,6 +31,7 @@
     "prettier": "^3.3.3",
     "rimraf": "^5.0.9",
     "ts-jest": "^29.2.2",
+    "tsc-alias": "^1.8.10",
     "typescript": "^5.5.4"
   },
   "engines": {
