--- a/js/packages/openinference-instrumentation-langchain/tsconfig.esm.json
+++ b/js/packages/openinference-instrumentation-langchain/tsconfig.esm.json
@@ -7,6 +7,10 @@
   },
   "include": ["src/**/*.ts"],
   "references": [],
+  "tsc-alias": {
+    "verbose": false,
+    "resolveFullPaths": true
+  },
   "paths": {
     "langchainV0.1/*": ["node_modules/langchainV0.1/*"],
     "@langchain/coreV0.1/*": ["node_modules/@langchain/coreV0.1/*"],
