--- a/js/packages/openinference-core/package.json
+++ b/js/packages/openinference-core/package.json
@@ -9,9 +9,16 @@
   "description": "OpenInference Core provides utilities shared by all OpenInference SDK packages.",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc --build tsconfig.json tsconfig.esm.json tsconfig.esnext.json",
+    "build": "tsc --build tsconfig.json tsconfig.esm.json tsconfig.esnext.json && tsc-alias -p tsconfig.esm.json",
+    "postbuild": "echo '{\"type\": \"module\"}' > ./dist/esm/package.json; rimraf dist/test",
     "type:check": "tsc --noEmit",
     "test": "jest"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/src/index.js"
+    }
   },
   "files": [
     "dist",
@@ -34,8 +41,8 @@
   },
   "dependencies": {
     "@arizeai/openinference-semantic-conventions": "workspace:*",
-    "@opentelemetry/core": "^1.25.1",
-    "@opentelemetry/api": "^1.9.0"
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/core": "^1.25.1"
   },
   "devDependencies": {
     "@opentelemetry/context-async-hooks": "^1.25.1",
