--- a/js/packages/openinference-core/tsconfig.esm.json
+++ b/js/packages/openinference-core/tsconfig.esm.json
@@ -7,5 +7,9 @@
     "baseUrl": "./src"
   },
   "include": ["src/**/*.ts"],
+  "tsc-alias": {
+    "verbose": false,
+    "resolveFullPaths": true
+  },
   "references": []
 }
