--- a/js/packages/openinference-vercel/tsconfig.esm.json
+++ b/js/packages/openinference-vercel/tsconfig.esm.json
@@ -6,5 +6,9 @@
     "tsBuildInfoFile": "dist/esm/tsconfig.esm.tsbuildinfo"
   },
   "include": ["src/**/*.ts"],
+  "tsc-alias": {
+    "verbose": false,
+    "resolveFullPaths": true
+  },
   "references": []
 }
