--- a/js/tsconfig.base.esm.json
+++ b/js/tsconfig.base.esm.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "target": "ES2020",
     "moduleResolution": "node10",
-    "module": "ES2020",
+    "module": "ES2020"
   }
 }
