--- a/python/tox.ini
+++ b/python/tox.ini
@@ -57,7 +57,7 @@ commands_pre =
   openai-latest: uv pip install -U openai 'httpx<0.28'
   vertexai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-vertexai[test]
   vertexai-latest: uv pip install -U vertexai 'httpx<0.28'
-  llama_index: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
+  llama_index: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test] 'httpx<0.28'
   llama_index-latest: uv pip install -U llama-index llama-index-core 'httpx<0.28'
   dspy: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
   dspy-latest: uv pip install -U dspy-ai 'httpx<0.28'
