--- a/js/tsconfig.base.esm.json
+++ b/js/tsconfig.base.esm.json
@@ -4,5 +4,9 @@
     "target": "ES2020",
     "moduleResolution": "node10",
     "module": "ES2020"
-  }
+  },
+  "tsc-alias": {
+    "verbose": false,
+    "resolveFullPaths": true
+  },
 }
