feat(js): Fix ESM builds (#1163)
Co-authored-by: Mikyo King <mikyo@arize.com>

--- a/js/tsconfig.base.esm.json
+++ b/js/tsconfig.base.esm.json
@@ -1,7 +1,12 @@
 {
-  "extends": "./tsconfig.base.es5.json",
+  "extends": "./tsconfig.base.esnext.json",
   "compilerOptions": {
-    "module": "ES6",
-    "moduleResolution": "node"
+    "target": "ES2020",
+    "moduleResolution": "node10",
+    "module": "ES2020"
+  },
+  "tsc-alias": {
+    "verbose": false,
+    "resolveFullPaths": true
   }
 }
