--- a/python/tox.ini
+++ b/python/tox.ini
@@ -58,7 +58,7 @@ commands_pre =
   vertexai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-vertexai[test]
   vertexai-latest: uv pip install -U vertexai 'httpx<0.28'
   llama_index: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test] 'httpx<0.28'
-  llama_index-latest: uv pip install -U llama-index llama-index-core 'httpx<0.28'
+  llama_index-latest: uv pip install -U llama-index llama-index-core llama-index-llms-openai openai llama-index-llms-anthropic anthropic 'httpx<0.28'
   dspy: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
   dspy-latest: uv pip install -U dspy-ai 'httpx<0.28'
   langchain: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
