--- a/python/tox.ini
+++ b/python/tox.ini
@@ -18,6 +18,7 @@ envlist =
   py3{8,12}-ci-{litellm,litellm-latest}
   ; py3{9,12}-ci-instructor
   py3{8,12}-ci-{anthropic,anthropic-latest}
+  py3{10,13}-ci-{smolagents,smolagents-latest}
   py38-mypy-langchain_core
 
 [testenv]
