--- a/python/instrumentation/openinference-instrumentation-litellm/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-litellm/pyproject.toml
@@ -39,7 +39,7 @@ test = [
   "opentelemetry-sdk",
   "opentelemetry-instrumentation-httpx",
   "tenacity",
-  "tokenizers>=0.21.0"
+  "tokenizers==0.20.3; python_version == '3.8'"
 ]
 
 [project.urls]
