--- a/python/tox.ini
+++ b/python/tox.ini
@@ -76,7 +76,7 @@ commands_pre =
   groq: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
   groq-latest: uv pip install -U groq 'httpx<0.28'
   litellm: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-litellm[test]
-  litellm-latest: uv pip install -U litellm 'httpx<0.28'
+  litellm-latest: uv pip install -U litellm 'httpx<0.28' 'tokenizer>=0.21.0'
   ; instructor: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
   ; instructor-latest: uv pip install -U instructor
   anthropic: uv pip uninstall -r test-requirements.txt
