--- a/python/tox.ini
+++ b/python/tox.ini
@@ -18,6 +18,7 @@ envlist =
   py3{8,12}-ci-{litellm,litellm-latest}
   ; py3{9,12}-ci-instructor
   py3{8,12}-ci-{anthropic,anthropic-latest}
+  py3{10,13}-ci-{smolagents,smolagents-latest}
   py38-mypy-langchain_core
 
 [testenv]
@@ -43,6 +44,7 @@ changedir =
   litellm: instrumentation/openinference-instrumentation-litellm/
   instructor: instrumentation/openinference-instrumentation-instructor/
   anthropic: instrumentation/openinference-instrumentation-anthropic/
+  smolagents: instrumentation/openinference-instrumentation-smolagents/
 commands_pre =
   instrumentation: uv pip install --reinstall {toxinidir}/openinference-instrumentation[test]
   semconv: uv pip install --reinstall {toxinidir}/openinference-semantic-conventions
@@ -84,6 +86,7 @@ commands_pre =
   anthropic: python -c 'import openinference.instrumentation.anthropic'
   anthropic: uv pip install -r test-requirements.txt
   anthropic-latest: uv pip install -U anthropic 'httpx<0.28'
+  smolagents: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-smolagents[test]
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check --fix {posargs:.}
